Polish `Custom Gradle integration`